RESOLVED FIXED192709
Callers of JSString::getIndex should check for OOM exceptions
https://bugs.webkit.org/show_bug.cgi?id=192709
Summary Callers of JSString::getIndex should check for OOM exceptions
Keith Miller
Reported 2018-12-14 11:39:39 PST
Callers of JSString::getIndex should check for OOM exceptions
Attachments
Patch (6.45 KB, patch)
2018-12-14 11:43 PST, Keith Miller
no flags
Patch for landing (6.47 KB, patch)
2018-12-14 12:15 PST, Keith Miller
no flags
Keith Miller
Comment 1 2018-12-14 11:43:17 PST
Mark Lam
Comment 2 2018-12-14 11:49:44 PST
Comment on attachment 357327 [details] Patch r=me
Keith Miller
Comment 3 2018-12-14 12:14:09 PST
Keith Miller
Comment 4 2018-12-14 12:14:58 PST
Comment on attachment 357327 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=357327&action=review > JSTests/stress/StringObject-define-length-getter-rope-string-oom.js:3 > +let char16 = decodeURI('%E7%9A%84'); > +let rope = char16.padEnd(2147483644, 1); > +rope.__defineGetter__(256, function () {}); Whoops forgot to wrap this in a try catch. Will do that before landing.
Keith Miller
Comment 5 2018-12-14 12:15:23 PST
Created attachment 357330 [details] Patch for landing
WebKit Commit Bot
Comment 6 2018-12-14 12:53:17 PST
Comment on attachment 357330 [details] Patch for landing Clearing flags on attachment: 357330 Committed r239227: <https://trac.webkit.org/changeset/239227>
WebKit Commit Bot
Comment 7 2018-12-14 12:53:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.